--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Test</title>
   </head>
   <body>
-    <h1>HI I'm Pooja</h1>
+    <h1>HI I'm Harsh</h1>
   </body>
 </html>
 <!-- Version Control System -->
